Start second draft of Prototype.

--- a/html/index.html
+++ b/html/index.html
@@ -63,7 +63,7 @@
   </li>
   <li>Design Patterns Revisited
       <ul>
-          <li>Prototype</li>
+          <li><a href="prototype.html">Prototype</a></li>
           <li><a href="singleton.html">Singleton</a></li>
           <li><a href="flyweight.html">Flyweight</a></li>
           <li><a href="command.html">Command</a></li>
